2008-11-11  Michael Natterer  <mitch@imendio.com>

	Bug 553765 – Add orientation API to GtkRange

	* gtk/gtkrange.[ch]: implement the GtkOrientable interface. Add
	evil code that makes sure that the stepper_detail and slider_detail
	set in GtkRangeClass continue to work with the hacked subclasses
	below.

	* gtk/gtkscale.[ch]: swallow all code from GtkHScale and GtkVScale
	and add gtk_scale_new() and gtk_scale_new_with_range() which take
	a GtkOrientation argument. Set slider_detail to "Xscale" so above
	evil code works.

	* gtk/gtkscrollbar.[ch]: add gtk_scrollbar_new() which takes a
	GtkOrientation argument. Set stepper_detail to "Xscrollbar" so
	above evil code works.

	* gtk/gtkhscale.c
	* gtk/gtkvscale.c
	* gtk/gtkhscrollbar.c
	* gtk/gtkvscrollbar.c: remove all code except the constructor and
	call gtk_orientable_set_orientation() in init().

	* gtk/gtk.symbols: changed accordingly.

2008-11-11  Michael Natterer  <mitch@imendio.com>

	* gtk/gtktoolbar.h: move deprecated functions together, move
	setters and getters together, some indentation cleanup.

2008-11-11  Michael Natterer  <mitch@imendio.com>

	* gtk/gtktoolbar.[ch]: implement the GtkOrientable interface
	and deprecate gtk_toolbar_get,set_orientation().

	* gtk/gtk.symbols: changed accordingly.

2008-11-10  Marek Kasik  <mkasik@redhat.com>

	Bug 560135 - Print when the user double clicks a printer

	* gtk/gtkprintunixdialog.c: add handling of double click to
	GtkPrintUnixDialog.

2008-11-07  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkpaned.c: argh, actually call the newly added private
	gtk_paned_calc_position() instead of the deprecated public
	version.

2008-11-07  Michael Natterer  <mitch@imendio.com>

	Bug 553586 – Add orientation API to GtkPaned

	* gtk/gtkpaned.[ch]: implement the GtkOrientable interface
	and swallow all code from GtkHPaned and GtkVPaned. Add
	gtk_paned_new() which takes a GtkOrientation argument. Deprecate
	gtk_paned_compute_position() for good (also for GTK_COMPILATION).
